[gd_scene load_steps=3 format=3 uid="uid://dawjwx8nckvmm"]

[ext_resource type="Script" uid="uid://bp7fip2nrq533" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://cm6482er0d1j5" path="res://scenes/character.tscn" id="2_sugp2"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0wfyh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Character" parent="CanvasLayer/VBoxContainer" instance=ExtResource("2_sugp2")]
position = Vector2(-169, -254)

[connection signal="finished_giving_advice" from="CanvasLayer/VBoxContainer/Character" to="." method="_on_character_finished_giving_advice"]
[connection signal="finished_walking" from="CanvasLayer/VBoxContainer/Character" to="." method="_on_character_finished_walking"]
[connection signal="giving_advice" from="CanvasLayer/VBoxContainer/Character" to="." method="_on_character_giving_advice"]
[connection signal="walking" from="CanvasLayer/VBoxContainer/Character" to="." method="_on_character_walking"]
